--- a/css/structure.css
+++ b/css/structure.css
@@ -399,7 +399,7 @@ ul#local-services-selector li:last-child {
 	}
 
 #sidebar .sidebar-container {
-	margin-top: 1rem;
+	margin-top: 1.5rem;
 	}
 
 #sidebar div:first-child {
