--- a/css/typography.css
+++ b/css/typography.css
@@ -23,7 +23,7 @@ h1 {
 	}
 
 #sidebar h3 {
-	padding: .5rem 0;
+	padding: 0 0 .5rem 0;
 	}
 
 .post h3 {
